--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -36,7 +36,7 @@
 <p>这些州中只有一个州——北达科他州——是八个报告死亡人数相对于其人口最高的州。</p>
 <p>根据《泰晤士报》的数据库，在法国，上周报告了115,897例病例和619例死亡，然后在巴黎和其它城市实行了宵禁。意大利周六报告了10,925例新感染病例的记录，几乎是14天前平均感染人数的三倍，死亡案例47例。预计政府将在周日宣布进一步的限制。</p>
 <p>据卫生部称，波兰也达到了新的高度，周六有9,622例新感染，84例相关死亡。乌克兰已将封锁延长至今年年底，据其国家安全和国防委员会称，乌克兰周六分别记录了6,410例新感染和109例死亡。</p>
-<p>世界卫生组织周四表示，自大流行开始以来，欧洲地区每周发生的病例数最高。该组织的区域负责人汉斯·克鲁格（Hans Kluge）表示：“每天的病例数在增加，住院治疗在增加，COVID-19现在是第五大死亡原因，每天的死亡人数已经达到了1000例。”尽管如此，死亡人数仍比四月份的高峰少五倍。</p>
+<p>世界卫生组织周四表示，自大流行开始以来，欧洲地区每周发生的病例数最高。该组织的区域负责人汉斯·克鲁格（Hans Kluge）表示：“每天的病例数在增加，住院治疗在增加，COVID-19现在是第五大死亡原因，每天的死亡人数已经达到了1,000例。”尽管如此，死亡人数仍比四月份的高峰少五倍。</p>
 <p><a name="_Toc2020101814"></a></p>
 <h3>推特删白宫顾问“口罩无用论”推文</h3>
 <p>推特（Twitter）从白宫中共病毒高级顾问斯科特·阿特拉斯博士（Dr. Scott Atlas）那里删除了一条推文，该推文质疑口罩在对抗COVID-19方面的有效性。</p>
@@ -60,7 +60,7 @@
 <h3>明尼苏达州报告新增逾1,700例病例</h3>
 <p>明尼苏达州卫生部门周日报告了1,732例新的COVID-19病例，以及17例死亡。</p>
 <p>这使该州的COVID-19病例总数达到122,812，死亡总数为2,234。</p>
-<p>约翰·霍普金斯大学的最新数据显示，明尼苏达州连续10天每天的新增病例数超过1000例，该州自大流行以来报告的每日最高记录为2,290。</p>
+<p>约翰·霍普金斯大学的最新数据显示，明尼苏达州连续10天每天的新增病例数超过1,000例，该州自大流行以来报告的每日最高纪录为2,290。</p>
 <h3>纽约“红色区域”阳性率3.19% 整体阳性率为1.08%。</h3>
 <p>州长安德鲁·库默（Andrew Cuomo）周日宣布，纽约布鲁克林、皇后区、罗克兰和奥兰治县某些特定“红色区域”重点地区的平均COVID-19阳性率目前为3.19%，低于周六的4.34%。</p>
 <p>库默说，纽约的整体阳性率（包括红色区域）为1.08%。</p>
@@ -170,8 +170,8 @@
 <p>据路透社分析，拉丁美洲是受影响最严重地区，约占全球总COVID-19病例的27%。</p>
 <p><a name="_Toc2020101803"></a></p>
 <h3>麦康奈尔提出“瘦”型救助法案 美参院下周投票</h3>
-<p>美国参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周六（10月17日）详细介绍了一项5000亿美元的“瘦”型救助法案，他说参议院将在下周三（10月21日）投票。</p>
-<p>该法案的目标比白宫的1.8万亿美元救助法案更具针对性，它将扩大联邦失业救济金，补充“工资保护计划”，向学校提供超过1000亿美元的资金，并为疫苗生产、分发以及测试和追踪提供资金。</p>
+<p>美国参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周六（10月17日）详细介绍了一项5,000亿美元的“瘦”型救助法案，他说参议院将在下周三（10月21日）投票。</p>
+<p>该法案的目标比白宫的1.8万亿美元救助法案更具针对性，它将扩大联邦失业救济金，补充“工资保护计划”，向学校提供超过1,000亿美元的资金，并为疫苗生产、分发以及测试和追踪提供资金。</p>
 <p>麦康奈尔说，除非民主党进行阻挠，否则参议院将对该法案进行投票，然后再对艾米·科尼·巴雷特法官的最高法院大法官确认进行投票。</p>
 <p>他需要60票才能在参议院通过该法案。民主党此前曾阻止过类似的法案。</p>
 <p>白宫提出了1.8万亿美元的救助法案，但众议院议长南希·佩洛西拒绝了白宫的法案。</p>
@@ -187,18 +187,18 @@
 <p>截至周六，英国57%的人口生活在更为严格的COVID-19限制之下。</p>
 <figure id="attachment_12483696" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D.jpg"><img class="wp-image-12483696 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周六（10月17日），英国示威者聚集在伦敦市中心，反对英国实施封锁措施。(JUSTIN TALLIS/AFP)</figcaption></figure>
 <h3>俄亥俄州新病例破2,000</h3>
-<p>俄亥俄州周六（10月17日）打破单日新病例纪录，且连续第四天每天超过2000例感染。<br />
+<p>俄亥俄州周六（10月17日）打破单日新病例纪录，且连续第四天每天超过2,000例感染。<br />
 周六。该州报告2234人被感染，病例总计180,225人。该州在过去三周中增加了30,000病例，平均每天增加1,439例。</p>
-<p>最近偶刘，俄亥俄州新增13人死亡，死亡总计5,067人。</p>
+<p>最近，俄亥俄州新增13人死亡，死亡总计5,067人。</p>
 <h3>印第安纳州新病例连续第二天破纪录</h3>
-<p>印第安纳州连续第二天刷新新感染记录。该州周六（10月17日）报告了2,521新病例，虽然说有100例属于旧病例，但仍超过周五创下的2,283例最高记录。</p>
+<p>印第安纳州连续第二天刷新新感染记录。该州周六（10月17日）报告了2,521新病例，虽然说有100例属于旧病例，但仍超过周五创下的2,283例最高纪录。</p>
 <p>自9月中旬以来，该州总病例数已达145,977，死亡总数3,685。</p>
 <figure id="attachment_12478351" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800.jpg"><img class="size-large wp-image-12478351" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">位于印第安那州，彻斯特顿市的O&#8217;Gara and Wilson Antiquarian Booksellers古书收藏，店橱窗上的标语：“入内请戴面罩。”(Scott Olson/Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101807"></a></p>
 <h3>美国大草原州病例增幅大</h3>
 <p>截至周六美东时间中午12：19，美国疾控中心（CDC）数据显示，过去七天每10万人平均有16.7人感染。</p>
 <p>根据约翰·霍普金斯的数据，美国平均每天新增约55,000病例，与一周前相比增长了16%以上。北达科他州、南达科他州、蒙大拿州和威斯康星州每10万居民中感染人数达最高。</p>
-<p>疫情在某些州变得严重。威斯康星州州长托尼?埃弗斯（Tony Evers）于本周在州立博览会公园启用另一家护理设施，该设施向染疫患者开放。</p>
+<p>疫情在某些州变得严重。威斯康星州州长托尼·埃弗斯（Tony Evers）于本周在州立博览会公园启用另一家护理设施，该设施向染疫患者开放。</p>
 <p>在北达科他州，病例数比一周前增长了近34%，当地官员担心一些医院可能没有足够人员来治疗重症者。</p>
 <p>今年春天，美国疫情最严重的州在东北部各州和西部的加州，夏季则是阳光地带的州病例激增。</p>
 <p>根据约翰·霍普金斯大学和彭博社汇编的数据，周五美国新病例增加69,276，是连续第四天上升，并且是7月29日以来的最高纪录。</p>
@@ -210,11 +210,11 @@
 <figure id="attachment_12483590" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN.jpg"><img class="wp-image-12483590 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月17日，抗议人群聚集在首都布拉迪斯拉发（Bratislava）的政府办公室前，因为违反六人禁令，警察用水枪和胡椒喷雾驱散人群。警方称“数”人被拘留。(VLADIMIR SIMICEK/AFP)</figcaption></figure>
 <h3>法国单日新增三万多病例 创纪录</h3>
 <p>法国周六（10月16日）报告称，在过去24小时内，有32,427新病例。</p>
-<p>政府已于周六在巴黎地区和其他八个大都市地区实施宵禁，从晚上9点开始将人们限制在家中，直到凌晨6点，持续四个星期。</p>
+<p>政府已于周六在巴黎地区和其它八个大都市地区实施宵禁，从晚上9点开始将人们限制在家中，直到凌晨6点，持续四个星期。</p>
 <h3>不到一周时间 英国增10万病例</h3>
 <p>周六（10月17日），英国报告了16,171新病例，150人死亡。</p>
 <p>自上周日以来，英国已增加了十万多个新病例，几乎占705,428病例总数的15%。伦敦和埃塞克斯郊区周六已实施限制，人们被禁止在室内与家庭以外的人见面。</p>
-<figure id="attachment_12478668" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102.jpg"><img class="wp-image-12478668 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，伦敦市中心维多利亚街沿途的公交车站候车亭显示本地Covid警报级别目前为中的标志。政府10月15日宣布伦敦的警报级别将从中调为高，伦敦人从而面临着更严格的COVID-19限制。(JUSTIN TALLIS/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_12478668" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102.jpg"><img class="wp-image-12478668 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，伦敦市中心维多利亚街沿途的公交车站候车亭显示本地COVID-19警报级别目前为中的标志。政府10月15日宣布伦敦的警报级别将从中调为高，伦敦人从而面临着更严格的COVID-19限制。(JUSTIN TALLIS/AFP via Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101806"></a></p>
 <h3>中共疫苗研发弯道超车 专家忧灾难性后果</h3>
 <p>中共在疫苗研发上信息始终不透明，也不依照一般国际通用规范，西方专家担心，这可能会造成“灾难性后果”。</p>
@@ -222,17 +222,17 @@
 <p>这个消息本周由中国《科创板日报》抢先报导后，《华尔街日报》紧接着引述两名中国准留学生的话报导，他们在国药集团的网站上注册后接到通知，其中一名已接种疫苗的陈同学说，她接种前签署一份同意书，同意书有告知疫苗仍在临床试验阶段，可能导致头疼和手臂疼痛等副作用。</p>
 <p>目前，国药集团官网查不到可注册接种疫苗的资讯。中共官方喉舌《人民日报》旗下报纸《健康时报》上周三又援引国药集团未具名人士的话报导称，“相关消息不实”。</p>
 <p>美国乔治城大学全球卫生法教授高斯登（Lawrence Gostin）透过电子邮件回复自由亚洲电台置评请求时说，“不遵守疫苗临床实验阶段所有该遵循的道德与规范标准，这可能会对人群遭成灾难性的伤害，即使只是疫苗实验里出现微小的安全风险，都有可能会放大。”</p>
-<figure id="attachment_12425921" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/virus-vaccine-China-700x420.jpg"><img class="size-large wp-image-12425921" src="https://i.epochtimes.com/assets/uploads/2020/09/virus-vaccine-China-700x420-600x360.jpg" alt="" width="600" b="360" /></a><figcaption class="wp-caption-text">图为示意图。(Nicolas Asfouri/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_12425921" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/virus-vaccine-China-700x420.jpg"><img class="size-large wp-image-12425921" src="https://i.epochtimes.com/assets/uploads/2020/09/virus-vaccine-China-700x420-600x360.jpg" alt="" width="600" b="360" /></a><figcaption class="wp-caption-text">示意图。(Nicolas Asfouri/AFP via Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101804"></a></p>
 <h3>美防长：只有一名现役军人死于病毒</h3>
 <p>美国防长埃斯珀表示，自瘟疫大流行爆发以来，在美国130万军人中，只有1名现役军人死于中共病毒。</p>
 <p>美国军队在全球范围内部署人员，遍及150个国家。根据国防人力数据中心数据，在国外有多达165,000名永久驻军。</p>
 <p>国防部在网站上列出了因COVID-19造成的8例军事人员死亡，但该数字包括警卫或预备役人员。</p>
-<p>一名现役军人是首席航空兵、现年41岁的查尔斯?罗伯特?沙克尔（Charles Robert Thacker Jr.）于4月去世。沙克尔在西奥多?罗斯福（Theodore Roosevelt）航母上任职。</p>
+<p>一名现役军人是首席航空兵、现年41岁的查尔斯?罗伯特·沙克尔（Charles Robert Thacker Jr.）于4月去世。沙克尔在西奥多·罗斯福（Theodore Roosevelt）航母上任职。</p>
 <p>“我们的感染率远低于美国人民，每一次、每一次损失都是可怕的，但是感谢上帝，我们只失去了一名现役军人，而且部队的表现还不错。” 埃斯珀说。</p>
 <p>埃斯珀补充说，军方对服役人员进行训练、治疗、追踪并要求遵循协议。</p>
 <p>“你必须能够胜任工作，而且我们所有人都有能力做到这一点，无论你是最低级别的人员还是国防部长，无论如何，国防部都时刻准备好，我们准备继续并确保我们完成任务。”他说。</p>
-<figure id="attachment_12478868" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125.jpg"><img class="wp-image-12478868 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">美国防部长埃斯珀（Mark Esper）资料图。（SAUL LOEB/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_12478868" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125.jpg"><img class="wp-image-12478868 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">美国防部长埃斯珀（Mark Esper）资料图。(SAUL LOEB/AFP via Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101805"></a></p>
 <h3>蓬佩奥：中共已经为瞒疫付出沉重代价</h3>
 <p>10月15日，美国国务卿蓬佩奥接受亚利桑那州KTAR新闻采访，主持人提到川普总统经常说中国（中共）释放病毒，要让中共付出代价，如何让中共付出代价呢？</p>
@@ -254,14 +254,14 @@
 <h3>疫情影响 美国品牌尝试电视购物</h3>
 <p>为了吸引居家购物者，一些品牌正在复制QVC。</p>
 <p>QVC是美国最大的电视购物公司，成立于1986年，总部位于美国宾夕法尼亚州威彻斯特，其旗下频道通过地面、卫星、有线电视及互联网面向全球多国播出。“QVC”的名称源自“Quality, Value, Convenience”（质量、价格、便捷）的首字母缩写。</p>
-<p>在不久前一个下午，有超过12,600名观众进入汤米?希尔费格（Tommy Hilfiger）网站，观看模特、网红和名人谈论该品牌的秋季系列。</p>
-<p>零售商试图吸引长期以来在QVC和家庭购物网络上流连的消费者。汤米?希尔费格（Tommy Hilfiger）和列维?斯特劳斯（Levi Strauss）等品牌希望不愿逛商店的购物者参加现场直播的在线销售活动，并在假期购物季节来临之前购买荷叶边衬衫、手袋和其它非必需品。</p>
-<p>观众可以在活动期间与演示者聊天，然后单击商品以将其添加到虚拟购物车中进行购买。汤米?希尔菲格（Tommy Hilfiger）的首席营销官迈克尔?施纳纳（Michael Scheiner）说，观众的许多疑问都与休闲装的趋势有关。</p>
+<p>在不久前一个下午，有超过12,600名观众进入汤米·希尔费格（Tommy Hilfiger）网站，观看模特、网红和名人谈论该品牌的秋季系列。</p>
+<p>零售商试图吸引长期以来在QVC和家庭购物网络上流连的消费者。汤米·希尔费格（Tommy Hilfiger）和列维·斯特劳斯（Levi Strauss）等品牌希望不愿逛商店的购物者参加现场直播的在线销售活动，并在假期购物季节来临之前购买荷叶边衬衫、手袋和其它非必需品。</p>
+<p>观众可以在活动期间与演示者聊天，然后单击商品以将其添加到虚拟购物车中进行购买。汤米?希尔菲格（Tommy Hilfiger）的首席营销官迈克尔·施纳纳（Michael Scheiner）说，观众的许多疑问都与休闲装的趋势有关。</p>
 <p>Coresight Research预测，到2023年，美国的直播购物活动将产生250亿美元销售额。</p>
 <figure id="attachment_6541356" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2015/12/1512230920301973.jpg"><img class="size-large wp-image-6541356" src="https://i.epochtimes.com/assets/uploads/2015/12/1512230920301973-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">纽约梦幻圣诞夜 品味传统与时尚。纽约第五大道TOMMY HILFIGER 的圣诞灯饰。（戴兵／大纪元）</figcaption></figure>
 <h3>疫情期间 美国年轻人利用远程工作机会出游</h3>
 <p>很多人可能认为中共病毒大流行不是驾车旅行的好时机，但对于一些年轻的美国人来说，这是驾车旅行的完美时光。</p>
-<p>彭博社报导，整个夏天，布雷特?科拉齐（Bret Collazzi）和未婚妻高迪（Di Gao）决定放弃他们在纽约的公寓租约，购买汽车，展开全国范围的远程旅行。秋天的计划是从纽约驱车前往西雅图，然后前往加州、德州的城市，再去路易斯安那州。</p>
+<p>彭博社报导，整个夏天，布雷特·科拉齐（Bret Collazzi）和未婚妻高迪（Di Gao）决定放弃他们在纽约的公寓租约，购买汽车，展开全国范围的远程旅行。秋天的计划是从纽约驱车前往西雅图，然后前往加州、德州的城市，再去路易斯安那州。</p>
 <p>根据人口普查局的家庭脉动（Household Pulse）调查，9月2日至14日，超过34%的人将部分或全部远程上班。</p>
 <p>低薪工作的人通常没有高收入者的上班灵活性：年收入超过100,000美元的家庭中，超过61%的家庭表示，他们可以远程办公，而年收入不足100,000美元的家庭，这一数字只有25%。</p>
 <p>尽管旅游业在三月份几乎停滞不前，但是美国人已经开始外出。Nestpick首席执行官Omer Kucukdere表示，有证据表明美国人的旅行时间更长。Nestpick专门研究中长期带家具的公寓租赁。</p>
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/6/n11093693.md#1" target="_blank">林辉：“口吞红太阳”与“领袖最脏”罪</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/6/n10120117.md#1" target="_blank">林辉：文革“群丑图”从热传到被封杀的背后</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/4/n10688678.md#1" target="_blank">摆脱人生困境 美国女子重拾幸福</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
