--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,10 +13,10 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484524.md#1" title="疫情期间 大陆“罚款经济”愈发严重""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/03/1103102129062320-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484560.md#1" title="以色列和阿联酋加强合作 达成投资双边协议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8RJ4QH-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nsxsof363.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环动力不足</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485685.md#1">中共部署东风17 苏贞昌：威胁区域平和</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485912.md#1">“原创”的反义词是啥？ 学生作业调侃“中国”</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环动力不足</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485685.md#1">中共部署东风17 苏贞昌：威胁区域平和</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485912.md#1">“原创”的反义词是啥？ 学生作业调侃“中国”</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485661.md#1">吁三退自救 圣荷西义工传递退党真相</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485726.md#1">法轮功车队华埠游行 穿梭闹市传真相</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
